--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     font-family: sans-serif;
 }
+
 #image {
     width:100%;
     object-fit: cover;
@@ -34,6 +35,7 @@ h1,h2 {
 #jobs {
     max-width: 900px;
     margin: 0 auto;
+    padding: 0 10px;
 }
 .location {
     color: gray;
@@ -44,13 +46,13 @@ h3 {
     margin-bottom: 6px;
     margin-top:0;
 }
-.apply {
+.apply{
     float: right;
     text-decoration: none;
     color: black;
 
 }
-a{
+a.apply{
     border: 3px solid #708090;
     background-color: #708090;
     border-radius: 4px;
